RESOLVED FIXED23497
Compilation error
https://bugs.webkit.org/show_bug.cgi?id=23497
Summary Compilation error
Judit Jász
Reported 2009-01-23 00:44:52 PST
Compilation of JavaScriptCore is failed if the ENABLE_JIT and WTF_USE_JIT_STUB_ARGUMENT_REGISTER macros are set.
Attachments
proposed patch (1.10 KB, patch)
2009-01-23 00:52 PST, Judit Jász
darin: review+
Judit Jász
Comment 1 2009-01-23 00:52:30 PST
Created attachment 26961 [details] proposed patch
Darin Adler
Comment 2 2009-01-23 12:36:34 PST
Comment on attachment 26961 [details] proposed patch r=me
Darin Adler
Comment 3 2009-01-25 13:12:01 PST
Note You need to log in before you can comment on or make changes to this bug.