2009-01-25  Judit Jasz  <jasy@inf.u-szeged.hu>

Reviewed by Darin Adler.

        Compilation problem fixing
        http://bugs.webkit.org/show_bug.cgi?id=23497

        * jit/JITCall.cpp:
        (JSC::JIT::compileOpCall): Use JSValuePtr::encode.



Canonical link: https://commits.webkit.org/32420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40232 268f45cc-cd09-0410-ab3c-d52691b4dbfc